Fix styles for RecipeCard. - Fix checkbox sizing issue. - Fix input styling issue on iOS Safari.

--- a/components/recipe-card/recipe-card.module.scss
+++ b/components/recipe-card/recipe-card.module.scss
@@ -13,12 +13,14 @@
         padding: 0 var.$spacing-5;
 
         .recipe-link {
+            font-family: spartan-bold, sans-serif;
             font-size: 1.25rem;
         }
 
         .source-link {
             align-items: center;
             display: inline-flex;
+            font-family: spartan-bold, sans-serif;
             gap: var.$spacing-1;
 
             &:hover {
@@ -38,6 +40,10 @@
                 height: $size;
                 width: $size;
             }
+        }
+
+        .source-name {
+            font-family: spartan-bold, sans-serif;
         }
     }
 
@@ -64,7 +70,7 @@
         padding: 0 var.$spacing-5;
 
         .time-yield-container {
-            align-items: center;
+            align-items: flex-center;
             display: flex;
             gap: var.$spacing-2;
 
@@ -80,8 +86,13 @@
                 width: $size;
             }
 
+            p {
+                font-family: spartan-bold, sans-serif;
+            }
+
             span {
-                font-size: 0.9rem;
+                font-family: spartan-regular, sans-serif;
+                font-size: 0.75rem;
             }
         }
 
@@ -92,6 +103,7 @@
                 gap: var.$spacing-5;
 
                 p {
+                    font-family: spartan-bold, sans-serif;
                     margin-bottom: var.$spacing-2;
                 }
 
@@ -105,11 +117,12 @@
 
                     li {
                         background-color: var.$color-info-main;
-                        border-radius: var.$border-radius;
+                        border-radius: var.$border-radius-chip;
                         color: var.$color-info-contrast-text;
                         display: inline-block;
-                        font-size: 0.9rem;
-                        padding: var.$spacing-1 var.$spacing-2;
+                        font-family: spartan-bold, sans-serif;
+                        font-size: 0.75rem;
+                        padding: var.$spacing-2 var.$spacing-3 var.$spacing-1;
                         // word-break: keep-all;
                         white-space: nowrap;
                     }
@@ -132,6 +145,7 @@
 
                     label {
                         cursor: pointer;
+                        font-family: spartan-regular, sans-serif;
                         padding: 0 0 0 var.$spacing-2;
 
                         &.checked {
