--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,7 +10,7 @@
 html {
     background-color: var.$color-grey-100;
     font-family: spartan-regular, sans-serif;
-    font-size: 16px; // 12px = 0.75rem | 24px = 1.5rem | 32px = 2rem
+    font-size: 16px; // 12px = 0.75rem | 20px = 1.25rem | 24px = 1.5rem | 32px = 2rem
     margin: 0;
     padding: 0;
 
@@ -53,16 +53,16 @@ button,
 input[type='submit'] {
     @include mixins.transition(background-color);
 
+    appearance: none;
     background-color: var.$color-primary-main;
     border: none;
-    border-radius: var.$spacing-1;
+    border-radius: var.$border-radius;
     color: white;
     cursor: pointer;
     font-family: spartan-bold, sans-serif;
     font-size: 1rem;
-    line-height: 2rem;
     margin: 0;
-    padding: var.$spacing-1 var.$spacing-5;
+    padding: var.$spacing-3 var.$spacing-5 var.$spacing-2;
 
     &:hover:enabled {
         background-color: var.$color-primary-dark;
@@ -158,7 +158,12 @@ input {
     padding: 0;
 
     &[type='checkbox'] {
+        border-radius: var.$border-radius;
         cursor: pointer;
+        height: 1rem;
+        min-height: 1rem;
+        min-width: 1rem;
+        width: 1rem;
 
         &:focus {
             @include mixins.focus-outline;
