--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -65,4 +65,5 @@ $transition-delay: 0s;
 
 // MISC =======================================================================
 $border-radius: $spacing-1;
+$border-radius-chip: 2rem;
 $opacity-disabled: 0.5;
